--- a/LemonadeStand_3DayStarter.csproj
+++ b/LemonadeStand_3DayStarter.csproj
@@ -55,8 +55,9 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recipe.cs" />
     <Compile Include="Store.cs" />
-    <Compile Include="SugarCube.cs" />
+    <Compile Include="CupOfSugar.cs" />
     <Compile Include="UserInterface.cs" />
     <Compile Include="Wallet.cs" />
     <Compile Include="Weather.cs" />
